--- a/Maui/SimpleWeather.Maui/Controls/AQIControl.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/AQIControl.xaml
@@ -1,84 +1,95 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SimpleWeather.Maui.Controls.AQIControl"
-             xmlns:sharedControls="clr-namespace:SimpleWeather.NET.Controls"
-             xmlns:commonControls="clr-namespace:SimpleWeather.Common.Controls;assembly=SimpleWeather.Common"
-             xmlns:controls="clr-namespace:SimpleWeather.Maui.Controls"
-             xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
-             xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
-             x:DataType="commonControls:AirQualityViewModel"
-             MinimumWidthRequest="340">
-    <Grid RowDefinitions="Auto,Auto,Auto,Auto" ColumnDefinitions="Auto,*" VerticalOptions="FillAndExpand">
+<ContentView
+    x:Class="SimpleWeather.Maui.Controls.AQIControl"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:commonControls="clr-namespace:SimpleWeather.Common.Controls;assembly=SimpleWeather.Common"
+    xmlns:controls="clr-namespace:SimpleWeather.Maui.Controls"
+    xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
+    xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
+    xmlns:sharedControls="clr-namespace:SimpleWeather.NET.Controls"
+    x:DataType="commonControls:AirQualityViewModel"
+    MinimumWidthRequest="340">
+    <Grid
+        ColumnDefinitions="Auto,*"
+        RowDefinitions="Auto,Auto,Auto,Auto"
+        VerticalOptions="FillAndExpand">
         <Label
+            x:Name="AQILabel"
             Grid.Row="0"
             Grid.Column="0"
-            x:Name="AQILabel"
-            Text="{x:Static res_strings:Resources.label_airquality}"
-            Style="{DynamicResource WeatherNowSectionLabel}" />
+            Style="{DynamicResource WeatherNowSectionLabel}"
+            Text="{x:Static res_strings:Resources.label_airquality}" />
         <Image
             Grid.Row="0"
             Grid.Column="1"
-            VerticalOptions="Center"
-            HorizontalOptions="End">
+            HorizontalOptions="End"
+            VerticalOptions="Center">
             <Image.Source>
-                <matIcons:MaterialIcon Symbol="ChevronRight" Size="24"
-                                       Color="{AppThemeBinding Light=Black, Dark=White}" />
+                <matIcons:MaterialIcon
+                    Size="24"
+                    Symbol="ChevronRight"
+                    Color="{AppThemeBinding Light=Black,
+                                            Dark=White}" />
             </Image.Source>
         </Image>
-        <Grid Grid.Row="1" Grid.ColumnSpan="2"
-              RowDefinitions="Auto,Auto" ColumnDefinitions="Auto,*">
+        <Grid
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            ColumnDefinitions="Auto,*"
+            RowDefinitions="Auto,Auto">
             <Label
                 x:Name="AQIndex"
                 Grid.Row="0"
-                Grid.Column="0"
                 Grid.RowSpan="2"
+                Grid.Column="0"
+                FontFamily="OpenSansSemibold"
+                FontSize="32"
+                HorizontalTextAlignment="Center"
                 MinimumHeightRequest="72"
                 MinimumWidthRequest="85"
-                VerticalOptions="Center"
-                VerticalTextAlignment="Center"
-                FontSize="32"
-                FontFamily="OpenSansSemibold"
                 Text="{Binding Index}"
-                HorizontalTextAlignment="Center"
-                TextColor="{Binding ProgressColor}" />
+                TextColor="{Binding ProgressColor}"
+                VerticalOptions="Center"
+                VerticalTextAlignment="Center" />
             <Label
                 x:Name="AQILevel"
                 Grid.Row="0"
                 Grid.Column="1"
                 Padding="6"
-                VerticalOptions="Center"
-                FontSize="18"
                 FontFamily="OpenSansSemibold"
-                Text="{Binding Level}" />
+                FontSize="18"
+                Text="{Binding Level}"
+                VerticalOptions="Center" />
             <Label
                 x:Name="AQIBlock"
                 Grid.Row="1"
                 Grid.Column="1"
                 Padding="6"
-                VerticalOptions="Start"
                 FontSize="14"
+                LineBreakMode="TailTruncation"
                 MaxLines="3"
                 Text="{Binding Description}"
-                LineBreakMode="TailTruncation" />
+                VerticalOptions="Start" />
         </Grid>
         <ProgressBar
             x:Name="AQIProgressBar"
             Grid.Row="2"
             Grid.ColumnSpan="2"
-            HeightRequest="4"
             Margin="12,0,12,12"
-            BackgroundColor="{AppThemeBinding Light='#B3616161', Dark='#8AF1F1F1'}"
-            ProgressColor="{Binding ProgressColor}"
-            Progress="{x:Bind Progress / 100}" />
+            BackgroundColor="{AppThemeBinding Light='#B3616161',
+                                              Dark='#8AF1F1F1'}"
+            HeightRequest="4"
+            Progress="{x:Bind Progress / 100}"
+            ProgressColor="{Binding ProgressColor}" />
         <Label
             x:Name="Attribution"
             Grid.Row="3"
             Grid.ColumnSpan="2"
             Padding="12,0,12,12"
-            HorizontalOptions="Center"
             FontSize="12"
+            HorizontalOptions="Center"
             IsVisible="{Binding Attribution, Converter={StaticResource stringBooleanConverter}}"
-            Text="{x:Bind $'{res_strings:Resources.credit_prefix} {Attribution}'}"/>
+            Text="{x:Bind $'{res_strings:Resources.credit_prefix} {Attribution}'}" />
     </Grid>
 </ContentView>
