Maui: update background tasks and add support for premium

--- a/Maui/SimpleWeather.Maui/Preferences/Settings_General.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_General.xaml
@@ -132,6 +132,7 @@
                         Tapped="TextCell_Tapped"
                         Text="{x:Static res_strings:Resources.pref_title_about_app}" />
                 </TableSection>
+                <TableSection x:Name="PremiumSection" />
             </TableRoot>
         </TableView>
     </Grid>
